Adjust the padding

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div id="app" v-cloak>
+<div id="app" class="list" v-cloak>
   <h1>國家目錄</h1><br>
   國名搜尋：<input type="text" v-model="searchContent">
   <br>
